--- a/assets/css/multiselectBckp.css
+++ b/assets/css/multiselectBckp.css
@@ -8,8 +8,8 @@ fieldset[disabled] .multiselect {
     position: absolute;
     right: 1px;
     top: 1px;
-    width: 36px;
-    height: 27px;
+    width: 40px;
+    height: 29px;
     background: #fff;
     display: block;
 }
@@ -20,9 +20,9 @@ fieldset[disabled] .multiselect {
     content: "";
     top: 50%;
     left: 50%;
-    margin: -6px 0 0 -8px;
-    width: 12px;
-    height: 12px;
+    margin: -8px 0 0 -8px;
+    width: 16px;
+    height: 16px;
     border-radius: 100%;
     border-color: #41b883 transparent transparent;
     border-style: solid;
@@ -109,17 +109,17 @@ fieldset[disabled] .multiselect {
 .multiselect__single {
     position: relative;
     display: inline-block;
-    min-height: 14px;
-    line-height: 14px;
+    min-height: 20px;
+    line-height: 20px;
     border: none;
     border-radius: 5px;
     background: #fff;
-    padding: 6px 0 0 5px;
+    padding: 0 0 0 5px;
     width: calc(100%);
     transition: border 0.1s ease;
     box-sizing: border-box;
-    vertical-align: bottom;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    vertical-align: top;
 }
 
 .multiselect__input::placeholder {
@@ -144,7 +144,8 @@ fieldset[disabled] .multiselect {
 
 .multiselect__single {
     padding-left: 5px;
-    margin-bottom: 0px;
+    padding-right: 10px;
+    margin-bottom: 0;
 }
 
 .multiselect__tags-wrap {
@@ -154,7 +155,7 @@ fieldset[disabled] .multiselect {
 .multiselect__tags {
     min-height: 29.4px;
     display: block;
-    padding: 1px 40px 0 8px;
+    padding: 5px 20px 0 4px;
     border-radius: 3px;
     border: 1px solid #ced4da;
     background: #fff;
@@ -165,12 +166,11 @@ fieldset[disabled] .multiselect {
     position: relative;
     display: inline-block;
     padding: 1px 20px 4px 10px;
-    border-radius: 5px;
-    margin-top: 4px;
-    margin-right: 10px;
+    border-radius: 3px;
+    margin-right: 5px;
     color: #fff;
     line-height: 1;
-    background: #3f6ad8;
+    background: #6c757d;
     margin-bottom: 0;
     white-space: nowrap;
     overflow: hidden;
@@ -183,12 +183,13 @@ fieldset[disabled] .multiselect {
     margin-left: 7px;
     position: absolute;
     right: 0;
-    top: 1px;
+    top: -3px;
     bottom: 0;
     font-weight: 700;
     font-style: initial;
     width: 22px;
     text-align: center;
+    line-height: 22px;
     transition: all 0.2s ease;
     border-radius: 5px;
 }
@@ -259,7 +260,8 @@ fieldset[disabled] .multiselect {
     color: #adadad;
     display: inline-block;
     margin-bottom: 0;
-    padding-top: 2px;
+    padding-top: 0;
+    padding-left: 5px;
 }
 
 .multiselect--active .multiselect__placeholder {
@@ -331,14 +333,14 @@ fieldset[disabled] .multiselect {
 }
 
 .multiselect__option--highlight {
-    background: #3f6ad8;
+    background: #58cd91;
     outline: none;
     color: white;
 }
 
 .multiselect__option--highlight::after {
     content: attr(data-select);
-    background: #3f6ad8;
+    background: #58cd91;
     color: white;
 }
 
