--- a/assets/css/adds.css
+++ b/assets/css/adds.css
@@ -9,6 +9,12 @@ body {
     border-radius: .2rem;
 }
 
+.btn-paging {
+    padding: 4px 4px;
+    line-height: .5;
+    border-radius: .2rem;
+}
+
 table .custom-control{
     min-height:1.0rem;
 }
