--- a/assets/css/adds.css
+++ b/assets/css/adds.css
@@ -19,6 +19,10 @@ table .custom-control{
     min-height:1.0rem;
 }
 
+h6 {
+    font-weight: 500;
+}
+
 .app-page-title .page-title-icon {
     height: 50px;
     width: 50px;
@@ -163,6 +167,24 @@ div.form-wrapper-light-thin {
     font-size: 0.88rem;
 }
 
+.card-title small {
+    font-weight: lighter; text-transform: none; font-size: smaller;
+}
+
+.code-example {
+    background-color: ghostwhite;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    position: relative;
+}
+
+.code-example code {
+    background-color: ghostwhite; display: block; white-space: pre-wrap;
+}
+.code-example button {
+    position: absolute; top: 5px; right: 5px;
+}
 
 .input-required input,
 .input-required select,
@@ -201,4 +223,57 @@ textarea.input-required {
 
 .tabs-animated-shadow .nav-link::before {
     box-shadow: none;
+}
+
+
+.typing-indicator {
+    display: flex;
+    gap: 5px;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #333;
+    animation: dot-pulse 1.5s infinite ease-in-out;
+}
+
+.dot:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.dot:nth-child(2) {
+    animation-delay: 0.3s;
+}
+
+.dot:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+@keyframes dot-pulse {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
+.user-avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    font-family: Arial, sans-serif;
+}
+
+.initials {
+    display: block;
 }
