--- a/assets/css/adds.css
+++ b/assets/css/adds.css
@@ -262,16 +262,18 @@ textarea.input-required {
 
 .user-avatar {
     width: 30px;
-    height: 30px;
+    height: auto;
+    aspect-ratio: 1 / 1;
+    line-height: 100%;
     border-radius: 50%;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-size: 11px;
     font-weight: bold;
     color: white;
     text-transform: uppercase;
     font-family: Arial, sans-serif;
+    font-size: 13px;
 }
 
 .initials {
