--- a/assets/css/adds.css
+++ b/assets/css/adds.css
@@ -19,6 +19,11 @@ table .custom-control{
     min-height:1.0rem;
 }
 
+table.table-overview th {
+    max-width: 50%; width: 230px;
+    padding-left: 0.25rem !important;
+}
+
 h6 {
     font-weight: 500;
 }
