tree picker modal

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -23679,3 +23679,18 @@ span.multiselect-native-select select {
 
 .after-img {
     max-width: 100%; }
+
+.input-wrapper {
+    position: relative;
+    cursor: text;
+    width: 100%;
+}
+
+.input-wrapper input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
